# GenAI

./: .gitignore
RAGwithPython/: README.md  app.py  pyproject.toml  requirements.txt
RAGwithPython/data/text_files/: machine_learning.txt  python_intro.txt
RAGwithPython/data/vector_store/: chroma.sqlite3
RAGwithPython/faiss_store/: faiss.index  metadata.pkl
RAGwithPython/notebook/: document.ipynb  pdf_loader.ipynb
RAGwithPython/src/: data_loader.py  search.py
basics/: package.json
basics/src/: index.js
chatApp/: package.json
chatApp/src/: index.ts
chromaDB/: README.md  package.json
chromaDB/src/: hfEmbedding.ts  index.ts  voyageEmbedding.ts
embeddings/: package.json
embeddings/src/: index.ts
genaiChatbot/backend/: README.md  app.py  requirements.txt
genaiChatbot/frontend/: README.md  index.html  package.json
genaiChatbot/frontend/src/: App.jsx  styles.css
genaiChatbot/frontend/src/components/: ChatWindow.jsx
genaiChatbot/frontend/src/styles/: ChatWindow.css
genaiDocumentSummarizer/: README.md
genaiDocumentSummarizer/backend/: app.py  requirements.txt
genaiDocumentSummarizer/frontend/: index.html  package-lock.json  package.json
genaiDocumentSummarizer/frontend/src/: App.jsx
imageGeneration/: package.json
imageGeneration/src/: index.ts  listModels.js  recordAndTranscribe.js  textToAudioElevenLabs.js  textToAudioGoogleTTS.js
langChain/: package.json
langChain/src/: index.ts
rag/: package.json  tsconfig.json
rag/src/: index.ts
rag/src/data/: data.txt
tools/: package.json
tools/src/: index.ts
(+5 files in other folders)
